# greatest-indexer-of-all-times

./: README.md  alter_db.sql
.github/workflows/: avail-ci.yml  avail-release.yml  ethereum-ci.yml  ethereum-release.yml
avail/: Cargo.toml  Dockerfile  README.md  justfile
avail/.cargo/: audit.toml
avail/src/: common.rs  configuration.rs  conversion.rs  db.rs  error.rs  execute.rs  execute_db.rs  indexer.rs  indexer_db.rs  main.rs  parse.rs  schema.rs  send_message.rs  stats.rs  sync.rs  syncer.rs
avail/src/db/: execute_table.rs  indexer.rs  main_table.rs  mod.rs  send_message_table.rs
ethereum/: .env.example  Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml  ponder.config.ts  ponder.schema.ts
ethereum/abis/: BridgeImplAbi.ts  BridgeProxyAbi.ts  IdleFinanceExecAbi.ts
ethereum/src/: index.ts  types.ts
